--- a/Contact/Contact.vcxproj.filters
+++ b/Contact/Contact.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="Contact.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ContactGroup.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Tool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
