分文件处理

--- a/Contact/Contact.vcxproj
+++ b/Contact/Contact.vcxproj
@@ -135,7 +135,11 @@
     <ClInclude Include="Tool.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="App.cpp" />
+    <ClCompile Include="consolecolor.cpp" />
+    <ClCompile Include="ContactGroup.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Tool.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
